--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,10 @@
 </body>
 <script src="/scripts/react/umd/react.production.min.js"></script>
 <script src="/scripts/styled-components/dist/styled-components.min.js"></script>
+<script src="/api/description/bundle"></script>
+<script src="/api/musicplayer/bundle"></script>
 <script src="/api/comments/bundle"></script>
+<script src="/api/sidebar/bundle"></script>
+
+
 </html>
